Switch to java 22 and enable preview features in runtime (#53)
* Update Dockerfile

* Update TeamServer.java